--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
       - ./logs/nginx.log:/var/log/access
       - ./logs/nginx.log:/var/log/error
 
+  # portainer:
+  #   image: portainer/portainer:demo
+  #   container_name: "portainer-app"
+  #   command: --no-analytics
+  #   networks:
+  #     - local
+  #   volumes:
+  #     - /tmp/manager_run/docker.sock:/var/run/docker.sock
+
   php-fpm:
     build:
       context: .
@@ -22,13 +31,12 @@ services:
       - "9000:9000"
     volumes:
       - ./public:/public
-    depends_on:
-      - mysql
 
-  mysql:
+  db:
     image: mysql:5.6
     restart: always
     environment:
+      DB_HOST: 'php-fpm'
       MYSQL_ROOT_PASSWORD: 'admin'
       MYSQL_USER: 'root'
       MYSQL_PASSWORD: ''
