add php.ini config

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -11,7 +11,7 @@ http {
     server {
         listen 80 default;
 
-        root /src;
+        root /src/public;
         index index.php index.html;
 
         if (!-e $request_filename) {
